test/files/neg/t7519-b/Use_2.scala
import scala.language.implicitConversions

trait Q
trait K

object Use {
  implicit def cd[T](p: T)(implicit ev: T => K): Q = ???
  val x: Q = ex.Mac.mac("asdf")
}

